src/test/ui/parser/issue-14303-path.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-path.rs:3:37
   |
LL | fn bar<'a, T>(x: mymodule::X<'a, T, 'b, 'c>) {}
   |                                     ^^

error: aborting due to previous error

